# zyk-llama.cpp

engines/MNN/: README.md
engines/executorch/: CMakePresets.json  README.md  e2e_runner.cpp
engines/mlc-llm/: README.md  mlc_bench.py
engines/mlx/: mlx_benchmark.py
engines/onnxruntime/: CMakeLists.txt  README.md  model_bench.cpp
engines/openvino/: CMakeLists.txt  README.md  bench_vlm.py  main-vlm.cpp  main.cpp
ggml/include/: ggml.h
ggml/src/: ggml-common.h  iqk_common.h
ggml/src/ggml-cpu/: ggml-cpu.cpp  repack.cpp  repack.h
ggml/src/ggml-cpu/arch/arm/: repack.cpp
ggml/src/ggml-cpu/arch/x86/: repack.cpp
